--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev:server": "cd server && pnpm dev",
     "dev:client": "cd client && pnpm dev",
-    "dev:test": "cd server && pnpm stressTest",
+    "dev:bots": "cd bots && pnpm dev",
     "lint": "biome check --write",
     "lint:ci": "biome check"
   },
