--- a/server/package.json
+++ b/server/package.json
@@ -7,20 +7,17 @@
     "start:dev": "NODE_ENV=production node --enable-source-maps dist/server/src/devServer.js",
     "dev": "ts-node-dev --respawn --rs --transpile-only src/devServer.ts",
     "dev:api": "ts-node-dev --respawn --rs --transpile-only src/apiServer.ts --api-server",
-    "dev:game": "ts-node-dev --respawn --rs --transpile-only src/gameServer.ts --game-server",
-    "stressTest": "tsc --project tsconfig.json && node --enable-source-maps dist/server/src/stressTest.js"
+    "dev:game": "ts-node-dev --respawn --rs --transpile-only src/gameServer.ts --game-server"
   },
   "dependencies": {
     "bit-buffer": "^0.2.5",
     "nanotimer": "^0.3.15",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4",
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.43.0",
-    "ws": "^8.18.0"
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.43.0"
   },
   "devDependencies": {
     "@types/nanotimer": "^0.3.2",
-    "@types/node": "^20.14.15",
-    "@types/ws": "^8.5.11"
+    "@types/node": "^20.14.15"
   }
 }
